data/derived/fa15/progs/unify/prog2368.ml.out
Characters 24-25:
  let _ = pipe [(fun x -> x+x); (fun x -> x + 3)] 2;;
                          ^
Error: This expression has type 'a -> 'b -> 'b
       but an expression was expected of type int
